# ddp.rpcgen

./: .gitignore  .gitmodules  CMakeLists.txt  build-all.sh  setup.sh
cmake/: FindProtobuf.cmake
dotdashpay/rpcgen/: CMakeLists.txt  cpp_generator.cc  cpp_generator.h  cpp_plugin.cc  ddp_generator.py  example-values.json  generator_helpers.h  nodejs_generator.cc  nodejs_generator.h  nodejs_generator.py  nodejs_plugin.cc  objc_generator.cc  objc_generator.h  objc_generator.py  objc_plugin.cc
dotdashpay/rpcgen/templates/: nodejs-api-namespace.js.j2  nodejs-request-object.js.j2  nodejs.api.source.j2  nodejs.examples.source.j2  objc.api.header.j2  objc.api.source.j2  objc.examples.source.j2
